syntax="proto3";
package cz.go.microservices.vessel;

service VesselService {
    rpc GetAvailable (Request) returns (Response);
}

message Request{
    int32 capacity =1;
    int32 max_weight=2;
}

message Vessel{
    string id=1;
    int32 capacity =2;
    int32 max_weight=3;
    string name=4;
    bool available=5;
    string owner_id=6;
}

message Response{
    Vessel vessel=1;
}